samples/_failures_safe/1761205904_f3b9c0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5622b1e5.c: In function ‘compute_bounds’:
./samples/SAFE/__tmp_5622b1e5.c:151:5: error: expected declaration or statement at end of input
  151 |     for (uint32_t i = 1; i < count; i++) {
      |     ^~~
./samples/SAFE/__tmp_5622b1e5.c:151:5: error: expected declaration or statement at end of input
